[project]
name = "pytest-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fabric>=3.2.2",
    "ipython>=8.32.0",
    "paramiko>=3.5.1",
    "pudb>=2024.1.3",
    "pytest-check>=2.4.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
pytest-sandbox = "pytest_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
markers = [
    "app_kind",
    "Friday",
    "license",
    "long",
    "Monday",
    "require_env",
    "Saturday",
    "smoke",
    "Sunday",
    "Thursday",
    "Tuesday",
    "unlicensed",
    "Wednesday",
]
