[project]
name = "pytest-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fabric>=3.2.2",
    "ipython>=8.32.0",
    "paramiko>=3.5.1",
    "pudb>=2024.1.3",
    "pytest-check>=2.4.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
pytest-sandbox = "pytest_sandbox:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pudb>=2025.1.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-dependency>=0.6.0",
    "ruff>=0.9.10",
]

[tool.pytest.ini_options]
markers = [
    "app_kind",
    "dependency",
    "Friday",
    "incremental",
    "license",
    "depends_on",
    "long",
    "Monday",
    "require_env",
    "Saturday",
    "smoke",
    "Sunday",
    "Thursday",
    "Tuesday",
    "unlicensed",
    "Wednesday",
]
log_cli = true
log_cli_level = "WARN"
log_cli_format = "%(levelname)-8s | %(name)s:%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(levelname)-8s | %(name)s:%(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv.workspace]
members = ["coverage", "mock/sim"]

